--- a/index.css
+++ b/index.css
@@ -60,3 +60,7 @@ li{list-style: none}
     background: url("img/7.jpg");
     background-size: 100% 100%;
 }
+.success{
+    background: url('img/final.jpg');
+    background-size: 100% 100%;
+}
